trunk/Archive2/f5/c09d8b7a7bf930/output
main.cpp:13:64: error: member reference base type 'string [10]' is not a structure or union
for (size_t p = 0, q = 0, i = 0; p != input.npos && i<readArray.size(); p = q, i++){
                                                      ~~~~~~~~~^~~~~
main.cpp:15:89: error: reference to overloaded function could not be resolved; did you mean to call it?
    result = input.substr(p + (p != 0), (q = input.find(sep, p + 1)) - p - (p != 0)) << endl;
                                                                                        ^~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:564:5: note: possible target for call
    endl(basic_ostream<_CharT, _Traits>& __os)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/basic_string.h:2772:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:471:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:476:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:482:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<char, _Traits>& __out, char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:488:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:493:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:513:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:530:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:543:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:548:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:602:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/ostream.tcc:321:5: note: candidate template ignored: could not match 'basic_ostream' against 'basic_string'
    operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
    ^
2 errors generated.
